--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation-bar">
             <span class="navbar-toggler-icon">&#9776;</span>  
         </button>
-        <a class="navbar-toggler" href="/"><img src="img/logo_transparente.png" class="img-fluid d-flex d-lg-none"></a>
+        <a class="navbar-toggler" href="/"><img src="img/images.png" class="img-fluid d-flex d-lg-none"></a>
           
         <div class="collapse navbar-collapse d-none d-lg-block" id="navigation-bar1">
             <ul class="navbar-nav">
-                <li class="nav-item"><a class="nav-link" href="#customers">CLIENTES</a></li>
+                <li class="nav-item"><a class="nav-link" href="clientes.html">CLIENTES</a></li>
                 <li class="nav-item"><a class="nav-link" href="#consultants">ASESORES</a></li>
                 <li class="nav-item"><a class="nav-link" href="#suppliers">PROVEEDORES</a></li>
             </ul>  
@@ -57,7 +57,7 @@
 
         <div class="collapse navbar-collapse" id="navigation-bar">
           <ul class="navbar-nav">
-              <li class="nav-item"><a class="nav-link" href="#customers">CLIENTES</a></li>
+              <li class="nav-item"><a class="nav-link" href="clientes.html">CLIENTES</a></li>
               <li class="nav-item"><a class="nav-link" href="#consultants">ASESORES</a></li>
               <li class="nav-item"><a class="nav-link" href="#suppliers">PROVEEDORES</a></li>
               <li class="nav-item"><a class="nav-link" href="#personal">PERSONALES</a></li>
@@ -65,7 +65,7 @@
           </ul>  
       </div>
 
-        <a class="navbar-brand" href="/"><img src="img/logo_transparente.png" class="img-fluid d-none d-lg-block"></a>
+        <a class="navbar-brand" href="/"><img src="img/images.png" class="img-fluid d-none d-lg-block"></a>
 
         <div class="collapse navbar-collapse d-none d-lg-block" id="navigation-bar2">
           <ul class="navbar-nav ml-auto">
