--- a/clientes.html
+++ b/clientes.html
@@ -45,7 +45,7 @@
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation-bar">
             <span class="navbar-toggler-icon">&#9776;</span>  
         </button>
-        <a class="navbar-toggler" href="/"><img src="img/images.png" class="img-fluid d-flex d-lg-none"></a>
+        <a class="navbar-toggler" href="/"><img src="img/logo_transparente.png" class="img-fluid d-flex d-lg-none"></a>
           
         <div class="collapse navbar-collapse d-none d-lg-block" id="navigation-bar1">
             <ul class="navbar-nav">
@@ -60,16 +60,16 @@
               <li class="nav-item"><a class="nav-link active" href="clientes.html">CLIENTES</a></li>
               <li class="nav-item"><a class="nav-link" href="#consultants">ASESORES</a></li>
               <li class="nav-item"><a class="nav-link" href="#suppliers">PROVEEDORES</a></li>
-              <li class="nav-item"><a class="nav-link" href="#personal">PERSONALES</a></li>
+              <li class="nav-item"><a class="nav-link" href="personales.html">PERSONALES</a></li>
               <li class="nav-item"><a class="nav-link" href="#company">EMPRESA</a></li>
           </ul>  
       </div>
 
-        <a class="navbar-brand" href="/"><img src="img/images.png" class="img-fluid d-none d-lg-block"></a>
+        <a class="navbar-brand" href="/"><img src="img/logo_transparente.png" class="img-fluid d-none d-lg-block"></a>
 
         <div class="collapse navbar-collapse d-none d-lg-block" id="navigation-bar2">
           <ul class="navbar-nav ml-auto">
-              <li class="nav-item"><a class="nav-link" href="#personal">PERSONALES</a></li>
+              <li class="nav-item"><a class="nav-link" href="personales.html">PERSONALES</a></li>
               <li class="nav-item"><a class="nav-link" href="#company">EMPRESA</a></li>
               <li class="nav-item"><a class="nav-link" href="#LOGIN">ENTRAR</a></li>
               <li class="nav-item"><button type="button" class="btn btn-outline-danger">REGISTRARSE</button></li>
@@ -94,7 +94,7 @@
 
               <div class="row d-flex justify-content-center standar-space">
                 <div class="col-md-1"></div>
-                <div class="col-md-10">
+                <div class="col-md-10 text-justify">
                   <h2>Más de 500 empresas han depositado su conanza en Seguros Pirámides, porque desde 19775 asumimos responsabilidad, encontrando las necesidades puntuales de cada uno, optimizando los
                   recursos y estableciendo relaciones a largo plazo.<br><br>
                   Es para nosotros un motivo de orgullo alcanzar los resultados propuestos con cada uno de nuestros clientes. Lo anterior demuestra que nuestro esfuerzo por ofrecerles lo mejor de nuestra
