--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation-bar">
             <span class="navbar-toggler-icon">&#9776;</span>  
         </button>
-        <a class="navbar-toggler" href="/"><img src="img/images.png" class="img-fluid d-flex d-lg-none"></a>
+        <a class="navbar-toggler" href="/"><img src="img/logo_transparente.png" class="img-fluid d-flex d-lg-none"></a>
           
         <div class="collapse navbar-collapse d-none d-lg-block" id="navigation-bar1">
             <ul class="navbar-nav">
@@ -60,16 +60,16 @@
               <li class="nav-item"><a class="nav-link" href="clientes.html">CLIENTES</a></li>
               <li class="nav-item"><a class="nav-link" href="#consultants">ASESORES</a></li>
               <li class="nav-item"><a class="nav-link" href="#suppliers">PROVEEDORES</a></li>
-              <li class="nav-item"><a class="nav-link" href="#personal">PERSONALES</a></li>
+              <li class="nav-item"><a class="nav-link" href="personales.html">PERSONALES</a></li>
               <li class="nav-item"><a class="nav-link" href="#company">EMPRESA</a></li>
           </ul>  
       </div>
 
-        <a class="navbar-brand" href="/"><img src="img/images.png" class="img-fluid d-none d-lg-block"></a>
+        <a class="navbar-brand" href="/"><img src="img/logo_transparente.png" class="img-fluid d-none d-lg-block"></a>
 
         <div class="collapse navbar-collapse d-none d-lg-block" id="navigation-bar2">
           <ul class="navbar-nav ml-auto">
-              <li class="nav-item"><a class="nav-link" href="#personal">PERSONALES</a></li>
+              <li class="nav-item"><a class="nav-link" href="personales.html">PERSONALES</a></li>
               <li class="nav-item"><a class="nav-link" href="#company">EMPRESA</a></li>
               <li class="nav-item"><a class="nav-link" href="#LOGIN">ENTRAR</a></li>
               <li class="nav-item"><button type="button" class="btn btn-outline-danger">REGISTRARSE</button></li>
@@ -90,7 +90,7 @@
                       <h1 class="d-none d-lg-block">CUIDAMOS</h1><h1 class="d-none d-lg-block">LO QUE AMAS</h1>
                   </div>
                   
-                  <div class="col-12 col-md-6 col-lg-4 d-flex justify-content-center">
+                  <div class="col-12 col-md-6 col-lg-4 d-flex align-items-center justify-content-center">
                     <div class="header-right">
                       <div class="d-flex flex-row">
                         <div class="col-md-4 text-center"><a href="#customers">AUTOMÓVIL</a></div>
