--- a/clientes.html
+++ b/clientes.html
@@ -42,7 +42,7 @@
       <!-- NAVBAR -->
       <nav class="navbar navbar-expand-lg fixed-top">
           
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation-bar">
+        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navigation-bar">
             <span class="navbar-toggler-icon">&#9776;</span>  
         </button>
         <a class="navbar-toggler" href="/"><img src="img/logo_transparente.png" class="img-fluid d-flex d-lg-none"></a>
