change color red for #ED1C24

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                   </div>
 
                   <div class="col-md-3 col-lg-4 text-center">
-                    <h2 class="d-none d-lg-flex justify-content-center">Obtén una cotización &nbsp;<p style="color: red;">GRATIS</p></h2> 
+                    <h2 class="d-none d-lg-flex justify-content-center">Obtén una cotización &nbsp;<p style="color: #ED1C24;">GRATIS</p></h2> 
                     <h2 class="d-none d-lg-flex justify-content-center">de forma rápida y sencilla</h2>
                   </div>
               </div>
@@ -718,11 +718,11 @@
             </div>
             </div>
             <a class="carousel-control-prev" href="#carouselExampleIndicatorsFull" role="button" data-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true" style="color: red;"></span>
+              <span class="carousel-control-prev-icon" aria-hidden="true" style="color: #ED1C24;"></span>
               <span class="sr-only">Previous</span>
             </a>
             <a class="carousel-control-next" href="#carouselExampleIndicatorsFull" role="button" data-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true" style="color: red;"></span>
+              <span class="carousel-control-next-icon" aria-hidden="true" style="color: #ED1C24;"></span>
               <span class="sr-only">Next</span>
             </a>
           </div>
@@ -850,11 +850,11 @@
               </div>
             </div>
             <a class="carousel-control-prev" href="#carouselExampleIndicatorsMin" role="button" data-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true" style="color: red;"></span>
+              <span class="carousel-control-prev-icon" aria-hidden="true" style="color: #ED1C24;"></span>
               <span class="sr-only">Previous</span>
             </a>
             <a class="carousel-control-next" href="#carouselExampleIndicatorsMin" role="button" data-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true" style="color: red;"></span>
+              <span class="carousel-control-next-icon" aria-hidden="true" style="color: #ED1C24;"></span>
               <span class="sr-only">Next</span>
             </a>
           </div>
