--- a/index.html
+++ b/index.html
@@ -873,7 +873,7 @@
             </div>
           </div>
           <div class="row text-center news-space">
-              <div class="col-12 col-xl-6"><a class="btn btn-danger">Salud</a><img src="img/noticia_principal-min.jpg"/></div>
+              <div class="col-12 col-xl-6 img-background"><a class="btn btn-danger">Salud</a><img src="img/noticia_principal-min.jpg" style="visibility: hidden;"/></div>
               <div class="d-none d-sm-none d-md-none d-xl-block col-xl-6">
                 <div class="row">
                   <div class="col-lg-6">
@@ -896,50 +896,48 @@
                       descuentos para 2019</strong></label>  
                   </div>
                 </div>
-              </div>
-              
-          </div>
-          <div class="row">
-            <div class="col-12 col-xl-6">
                 <div class="row">
-                  <div class=" col-md-10 col-lg-10">
-                    <label><strong>Seguro de vida sin examen médico:</strong></label>
-                    <label><strong>cómo obtener una póliza de vida sin examen</strong></label>
+                  <div class="col-lg-6">
+                    <a class="btn btn-danger">Patrimonial</a>
+                    <img src="img/noticias_secundarias03-min.jpg"/>
                   </div>
-                  <div class=" col-md-2 col-lg-2"></div>
+                  <div class="col-lg-6">
+                    <a class="btn btn-danger">Automóvil</a>
+                    <img src="img/noticias_secundarias04-min.jpg"/>
+                  </div>
                 </div>
                 <div class="row">
-                  <div class=" col-md-10 col-lg-10"><p>Si eres una de estas personas, ¡estás de suerte! Ya sea debido a condiciones de salud preexistentes o
-                  simplemente porque un examen médico sería inconveniente, hay opciones alternativas disponibles
-                  para usted. (Sin embargo, si es relativamente joven y goza de buena salud, será mejor que compre
-                  una póliza de seguro de vida tradicional ).</p>
+                  <div class="col-lg-6">
+                    <label class="label-medio"><strong>¿Qué cubre un seguro
+                      patrimonial?</strong></label>    
                   </div>
-                  <div class=" col-md-2 col-lg-2"></div>
-              </div>
-            </div>
-            <div class="d-none d-sm-none d-md-none d-xl-block col-lg-6 text-center">
-              <div class="row">
-                <div class="col-lg-6">
-                  <a class="btn btn-danger">Patrimonial</a>
-                  <img src="img/noticias_secundarias03-min.jpg"/>
-                </div>
-                <div class="col-lg-6">
-                  <a class="btn btn-danger">Automóvil</a>
-                  <img src="img/noticias_secundarias04-min.jpg"/>
+                  <div class="col-lg-6">
+                    <label class="label-medio"><strong>La vida en el carril lento:
+                      ciudades con más tráco</strong></label> 
+                  </div>
                 </div>
               </div>
-              <div class="row">
-                <div class="col-lg-6">
-                  <label class="label-medio"><strong>¿Qué cubre un seguro
-                    patrimonial?</strong></label>    
-                </div>
-                <div class="col-lg-6">
-                  <label class="label-medio"><strong>La vida en el carril lento:
-                    ciudades con más tráco</strong></label> 
-                </div>
-              </div>
-            </div>
         </div>
+        <div class="row news-principal-description">
+          <div class="col-12 col-xl-6">
+              <div class="row">
+                <div class=" col-md-10 col-lg-10">
+                  <label><strong>Seguro de vida sin examen médico:</strong></label>
+                  <label><strong>cómo obtener una póliza de vida sin examen</strong></label>
+                </div>
+                <div class=" col-md-2 col-lg-2"></div>
+              </div>
+              <div class="row">
+                <div class=" col-md-1 col-lg-1"></div>
+                <div class=" col-md-10 col-lg-10"><p>Si eres una de estas personas, ¡estás de suerte! Ya sea debido a condiciones de salud preexistentes o
+                simplemente porque un examen médico sería inconveniente, hay opciones alternativas disponibles
+                para usted. (Sin embargo, si es relativamente joven y goza de buena salud, será mejor que compre
+                una póliza de seguro de vida tradicional ).</p>
+                </div>
+                <div class=" col-md-1 col-lg-1"></div>
+            </div>
+          </div>
+      </div>
         <div class="row">
           <div class="col-12 d-lg-block d-xl-none">
             <a class="btn btn-danger">Patrimonial</a>
@@ -992,7 +990,9 @@
         
         <div class="row news-space-bottom"> </div>
       </div> 
-      <div id="readMore"><button class="btn btn-danger">Leer más</button></div>
+      <div id="readMore" class="row">
+        <div class="col-lg-12 text-center"><a class="btn btn-danger" href="articulos.html">Leer más</a></div>
+      </div>
     </section>
     <hr>
 
