--- a/index.html
+++ b/index.html
@@ -1034,8 +1034,12 @@
                     </fieldset>
                     <button type="submit" class="btn btn-danger btn-block">COTIZAR</button>
                   </form>
-                  <div class="row" style="text-align: right;"><a class="question"> ¿Has estado aquí antes?</a></div>
-                <div class="row align-self-right"><a class="comeback" href="#">Volver a Mis Cotizaciones</a></div>
+                  <div class="row">
+                    <div class="col-md-12 question"><a> ¿Has estado aquí antes?</a></div>
+                  </div>
+                  <div class="row">
+                    <div class="col-md-12 comeback"><a href="#">Volver a Mis Cotizaciones</a></div>
+                  </div>
               </div>
 
               <div class="col-lg-3 col-1 col-md-2 text-center">
