Ajustes en Responsive y Tipografía
Ajustes en Header con Responsive
Ajustes en Tipografía según requerimiento

--- a/index.html
+++ b/index.html
@@ -86,8 +86,9 @@
           <div class="container-fluid">
             
               <div class="row d-flex justify-content-center">
-                  <div class="col-md-3 col-lg-4 text-center">
-                      <h1 class="d-none d-lg-block">CUIDAMOS</h1><h1 class="d-none d-lg-block">LO QUE AMAS</h1>
+                  <div class="col-md-3 col-lg-4 text-center takecare">
+                      <h1 class="d-none d-lg-block">CUIDAMOS</h1>
+                      <h1 class="d-none d-lg-block">LO QUE AMAS</h1>
                   </div>
                   
                   <div class="col-12 col-md-4 col-lg-4 d-flex align-items-center justify-content-center">
@@ -337,8 +338,8 @@
                         <div class="row">
                           <div class="col-lg-3 col-sm-3 col-3 text-center"><img class="imagen-pie" src="img/seriedad-min.png" /></div>                  
                           <div class="col-lg-9 col-sm-9 col-9 align-self-center">
-                            <p>MEGAN MILNER</p>
-                            <p>Madre de un estudiante de</p>
+                            <p class="name">MEGAN MILNER</p>
+                            <p class="position">Madre de un estudiante de</p>
                             <p>Rocky Mountain College</p>
                           </div>
                         </div>
@@ -361,8 +362,8 @@
                         <div class="row">
                           <div class="col-lg-3 col-sm-3 col-3 text-center"><img class="imagen-pie" src="img/seriedad-min.png" /></div>                  
                           <div class="col-lg-9 col-sm-9 col-9 align-self-center">
-                            <p>MEGAN MILNER</p>
-                            <p>Madre de un estudiante de</p>
+                            <p class="name">MEGAN MILNER</p>
+                            <p class="position">Madre de un estudiante de</p>
                             <p>Rocky Mountain College</p>
                           </div>
                         </div>
@@ -385,8 +386,8 @@
                         <div class="row">
                           <div class="col-lg-3 col-sm-3 col-3 text-center"><img class="imagen-pie" src="img/seriedad-min.png" /></div>                  
                           <div class="col-lg-9 col-sm-9 col-9 align-self-center">
-                            <p>MEGAN MILNER</p>
-                            <p>Madre de un estudiante de</p>
+                            <p class="name">MEGAN MILNER</p>
+                            <p class="position">Madre de un estudiante de</p>
                             <p>Rocky Mountain College</p>
                           </div>
                         </div>
@@ -409,8 +410,8 @@
                         <div class="row">
                           <div class="col-lg-3 col-sm-3 col-3 text-center"><img class="imagen-pie" src="img/seriedad-min.png" /></div>                  
                           <div class="col-lg-9 col-sm-9 col-9 align-self-center">
-                            <p>MEGAN MILNER</p>
-                            <p>Madre de un estudiante de</p>
+                            <p class="name">MEGAN MILNER</p>
+                            <p class="position">Madre de un estudiante de</p>
                             <p>Rocky Mountain College</p>
                           </div>
                         </div>
@@ -437,7 +438,7 @@
                         <div class="row">
                           <div class="col-lg-3 col-sm-3 col-3 text-center"><img class="imagen-pie" src="img/seriedad-min.png" /></div>                  
                           <div class="col-lg-9 col-sm-9 col-9 align-self-center">
-                            <p>MEGAN MILNER</p>
+                            <p class="name">MEGAN MILNER</p>
                             <p>Madre de un estudiante de</p>
                             <p>Rocky Mountain College</p>
                           </div>
@@ -461,8 +462,8 @@
                         <div class="row">
                           <div class="col-lg-3 col-sm-3 col-3 text-center"><img class="imagen-pie" src="img/seriedad-min.png" /></div>                  
                           <div class="col-lg-9 col-sm-9 col-9 align-self-center">
-                            <p>MEGAN MILNER</p>
-                            <p>Madre de un estudiante de</p>
+                            <p class="name">MEGAN MILNER</p>
+                            <p class="position">Madre de un estudiante de</p>
                             <p>Rocky Mountain College</p>
                           </div>
                         </div>
@@ -485,8 +486,8 @@
                         <div class="row">
                           <div class="col-lg-3 col-sm-3 col-3 text-center"><img class="imagen-pie" src="img/seriedad-min.png" /></div>                  
                           <div class="col-lg-9 col-sm-9 col-9 align-self-center">
-                            <p>MEGAN MILNER</p>
-                            <p>Madre de un estudiante de</p>
+                            <p class="name">MEGAN MILNER</p>
+                            <p class="position">Madre de un estudiante de</p>
                             <p>Rocky Mountain College</p>
                           </div>
                         </div>
@@ -509,8 +510,8 @@
                         <div class="row">
                           <div class="col-lg-3 col-sm-3 col-3 text-center"><img class="imagen-pie" src="img/seriedad-min.png" /></div>                  
                           <div class="col-lg-9 col-sm-9 col-9 align-self-center">
-                            <p>MEGAN MILNER</p>
-                            <p>Madre de un estudiante de</p>
+                            <p class="name">MEGAN MILNER</p>
+                            <p class="position">Madre de un estudiante de</p>
                             <p>Rocky Mountain College</p>
                           </div>
                         </div>
@@ -537,8 +538,8 @@
                         <div class="row">
                           <div class="col-lg-3 col-sm-3 col-3 text-center"><img class="imagen-pie" src="img/seriedad-min.png" /></div>                  
                           <div class="col-lg-9 col-sm-9 col-9 align-self-center">
-                            <p>MEGAN MILNER</p>
-                            <p>Madre de un estudiante de</p>
+                            <p class="name">MEGAN MILNER</p>
+                            <p class="position">Madre de un estudiante de</p>
                             <p>Rocky Mountain College</p>
                           </div>
                         </div>
@@ -561,8 +562,8 @@
                         <div class="row">
                           <div class="col-lg-3 col-sm-3 col-3 text-center"><img class="imagen-pie" src="img/seriedad-min.png" /></div>                  
                           <div class="col-lg-9 col-sm-9 col-9 align-self-center">
-                            <p>MEGAN MILNER</p>
-                            <p>Madre de un estudiante de</p>
+                            <p class="name">MEGAN MILNER</p>
+                            <p class="position">Madre de un estudiante de</p>
                             <p>Rocky Mountain College</p>
                           </div>
                         </div>
@@ -585,8 +586,8 @@
                         <div class="row">
                           <div class="col-lg-3 col-sm-3 col-3 text-center"><img class="imagen-pie" src="img/seriedad-min.png" /></div>                  
                           <div class="col-lg-9 col-sm-9 col-9 align-self-center">
-                            <p>MEGAN MILNER</p>
-                            <p>Madre de un estudiante de</p>
+                            <p class="name">MEGAN MILNER</p>
+                            <p class="position">Madre de un estudiante de</p>
                             <p>Rocky Mountain College</p>
                           </div>
                         </div>
@@ -609,8 +610,8 @@
                         <div class="row">
                           <div class="col-lg-3 col-sm-3 col-3 text-center"><img class="imagen-pie" src="img/seriedad-min.png" /></div>                  
                           <div class="col-lg-9 col-sm-9 col-9 align-self-center">
-                            <p>MEGAN MILNER</p>
-                            <p>Madre de un estudiante de</p>
+                            <p class="name">MEGAN MILNER</p>
+                            <p class="position">Madre de un estudiante de</p>
                             <p>Rocky Mountain College</p>
                           </div>
                         </div>
@@ -637,8 +638,8 @@
                       <div class="row">
                         <div class="col-lg-3 col-sm-3 col-3 text-center"><img class="imagen-pie" src="img/seriedad-min.png" /></div>                  
                         <div class="col-lg-9 col-sm-9 col-9 align-self-center">
-                          <p>MEGAN MILNER</p>
-                          <p>Madre de un estudiante de</p>
+                          <p class="name">MEGAN MILNER</p>
+                          <p class="position">Madre de un estudiante de</p>
                           <p>Rocky Mountain College</p>
                         </div>
                       </div>
@@ -661,8 +662,8 @@
                       <div class="row">
                         <div class="col-lg-3 col-sm-3 col-3 text-center"><img class="imagen-pie" src="img/seriedad-min.png" /></div>                  
                         <div class="col-lg-9 col-sm-9 col-9 align-self-center">
-                          <p>MEGAN MILNER</p>
-                          <p>Madre de un estudiante de</p>
+                          <p class="name">MEGAN MILNER</p>
+                          <p class="position">Madre de un estudiante de</p>
                           <p>Rocky Mountain College</p>
                         </div>
                       </div>
@@ -685,8 +686,8 @@
                       <div class="row">
                         <div class="col-lg-3 col-sm-3 col-3 text-center"><img class="imagen-pie" src="img/seriedad-min.png" /></div>                  
                         <div class="col-lg-9 col-sm-9 col-9 align-self-center">
-                          <p>MEGAN MILNER</p>
-                          <p>Madre de un estudiante de</p>
+                          <p class="name">MEGAN MILNER</p>
+                          <p class="position">Madre de un estudiante de</p>
                           <p>Rocky Mountain College</p>
                         </div>
                       </div>
@@ -709,8 +710,8 @@
                       <div class="row">
                         <div class="col-lg-3 col-sm-3 col-3 text-center"><img class="imagen-pie" src="img/seriedad-min.png" /></div>                  
                         <div class="col-lg-9 col-sm-9 col-9 align-self-center">
-                          <p>MEGAN MILNER</p>
-                          <p>Madre de un estudiante de</p>
+                          <p class="name">MEGAN MILNER</p>
+                          <p class="position">Madre de un estudiante de</p>
                           <p>Rocky Mountain College</p>
                         </div>
                       </div>
@@ -757,8 +758,8 @@
                         <div class="row">
                           <div class="col-lg-3 col-sm-3 col-3 text-center"><img class="imagen-pie" src="img/seriedad-min.png" /></div>                  
                           <div class="col-lg-9 col-sm-9 col-9 align-self-center">
-                            <p>MEGAN MILNER</p>
-                            <p>Madre de un estudiante de</p>
+                            <p class="name">MEGAN MILNER</p>
+                            <p class="position">Madre de un estudiante de</p>
                             <p>Rocky Mountain College</p>
                           </div>
                         </div>
@@ -785,8 +786,8 @@
                         <div class="row">
                           <div class="col-lg-3 col-sm-3 col-3 text-center"><img class="imagen-pie" src="img/seriedad-min.png" /></div>                  
                           <div class="col-lg-9 col-sm-9 col-9 align-self-center">
-                            <p>MEGAN MILNER</p>
-                            <p>Madre de un estudiante de</p>
+                            <p class="name">MEGAN MILNER</p>
+                            <p class="position">Madre de un estudiante de</p>
                             <p>Rocky Mountain College</p>
                           </div>
                         </div>
@@ -813,8 +814,8 @@
                         <div class="row">
                           <div class="col-lg-3 col-sm-3 col-3 text-center"><img class="imagen-pie" src="img/seriedad-min.png" /></div>                  
                           <div class="col-lg-9 col-sm-9 col-9 align-self-center">
-                            <p>MEGAN MILNER</p>
-                            <p>Madre de un estudiante de</p>
+                            <p class="name">MEGAN MILNER</p>
+                            <p class="position">Madre de un estudiante de</p>
                             <p>Rocky Mountain College</p>
                           </div>
                         </div>
@@ -841,8 +842,8 @@
                         <div class="row">
                           <div class="col-lg-3 col-sm-3 col-3 text-center"><img class="imagen-pie" src="img/seriedad-min.png" /></div>                  
                           <div class="col-lg-9 col-sm-9 col-9 align-self-center">
-                            <p>MEGAN MILNER</p>
-                            <p>Madre de un estudiante de</p>
+                            <p class="name">MEGAN MILNER</p>
+                            <p class="position">Madre de un estudiante de</p>
                             <p>Rocky Mountain College</p>
                           </div>
                         </div>
