--- a/index.html
+++ b/index.html
@@ -144,19 +144,19 @@
     <section id="statistics">
       <div class="container-fluid d-flex h-100">
           <div class="row text-center align-self-center">
-            <div class="col-lg-3 col-md-4 col-sm-6 col-12 align-self-center">
+            <div class="col-lg-3 col-12 align-self-center">
                 <h1><strong>11.000</strong></h1>
                 <h2>Pólizas de automovil</h2>
             </div>
-            <div class="col-lg-3 col-md-4 col-sm-6 col-12 align-self-center">
+            <div class="col-lg-3 col-12 align-self-center">
               <h1><strong>8.000</strong></h1>
               <h2>Pólizas de salud</h2>
             </div>
-            <div class="col-lg-3 col-md-4 col-sm-6 col-12 align-self-center">
+            <div class="col-lg-3 col-12 align-self-center">
               <h1><strong>5.000</strong></h1>
               <h2>Pólizas de patrimoniales</h2>
             </div>
-            <div class="col-lg-3 col-md-4 col-sm-6 col-12 align-self-center">
+            <div class="col-lg-3 col-12 align-self-center">
               <h1><strong>3.000</strong></h1>
               <h2>Otros</h2>
             </div>
@@ -174,16 +174,16 @@
           </div>
         </div>
         <div class="row text-center d-flex trust-space">
-          <div class="col-lg-3 col-md-4 col-sm-6 col-12">
+          <div class="col-lg-3 col-12">
             <img src="img/confianza.png"/><p class="trust-titles">Confianza</p><p class="trust-descriptions">Garantizamos a nuestros asegurados e intermadiarios, la seguridad y confianza de contar con una empresa aseguradora que verdaderamente responde.</p>
           </div>
-          <div class="col-lg-3 col-md-4 col-sm-6 col-12">
+          <div class="col-lg-3 col-12">
             <img src="img/seriedad.png"/><p class="trust-titles">Seriedad</p><p class="trust-descriptions">Realizamos todas las actividades con el mayor respeto hacia nuestros asegurados e intermediarios.</p>
           </div>
-          <div class="col-lg-3 col-md-4 col-sm-6 col-12">
+          <div class="col-lg-3 col-12">
             <img src="img/solvencia.png"/><p class="trust-titles">Solvencia</p><p class="trust-descriptions">Cumplimos con los requisitos establecidos por la Superintendencia de la Actividad Aseguradora, la cual atribuye el prestigio de solvente.</p>
           </div>
-          <div class="col-lg-3 col-md-4 col-sm-6 col-12">
+          <div class="col-lg-3 col-12">
             <img src="img/rapidez.png"/><p class="trust-titles">Rapidez</p><p class="trust-descriptions">Rapidez de gestión. En pocos minutos puedes recibir la documentación en tu correo electrónico y poder disfrutar de tu seguro.</p>
           </div>
         </div>
